syntax = "proto3";
import "crypto/coconut/scheme/proto/types.proto";

package coconut;
option go_package = "github.com/nymtech/nym/crypto/coconut/scheme";

message ProtoThetaTumbler {
    coconut.ProtoTheta theta = 1;
    bytes zeta = 2;
}